source/puppet/2.7/reference/man/parser.markdown
---
layout: default
nav: /_includes/references_man.html
title: puppet parser Man Page
---

<div class='mp'>
<h2 id="NAME">NAME</h2>
<p class="man-name">
  <code>puppet-parser</code> - <span class="man-whatis">Interact directly with the parser.</span>
</p>

<h2 id="SYNOPSIS">SYNOPSIS</h2>

<p>puppet parser <var>action</var></p>

<h2 id="OPTIONS">OPTIONS</h2>

<p>Note that any configuration parameter that's valid in the configuration
file is also a valid long argument, although it may or may not be
relevant to the present action. For example, <code>server</code> and <code>run_mode</code> are valid
configuration parameters, so you can specify <code>--server &lt;servername></code>, or
<code>--run_mode &lt;runmode></code> as an argument.</p>

<p>See the configuration file documentation at
<a data-bare-link="true" href="http://docs.puppetlabs.com/references/stable/configuration.html">http://docs.puppetlabs.com/references/stable/configuration.html</a> for the
full list of acceptable parameters. A commented list of all
configuration options can also be generated by running puppet with
<code>--genconfig</code>.</p>

<dl>
<dt>--render-as FORMAT</dt><dd>The format in which to render output. The most common formats are <code>json</code>,
<code>s</code> (string), <code>yaml</code>, and <code>console</code>, but other options such as <code>dot</code> are
sometimes available.</dd>
<dt>--verbose</dt><dd>Whether to log verbosely.</dd>
<dt class="flush">--debug</dt><dd>Whether to log debug information.</dd>
</dl>


<h2 id="ACTIONS">ACTIONS</h2>

<dl>
<dt><code>validate</code> - Validate the syntax of one or more Puppet manifests.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet parser validate [<var>manifest</var>] [<var>manifest</var> ...]</p>

<p><code>DESCRIPTION</code></p>

<p>This action validates Puppet DSL syntax without compiling a catalog or
syncing any resources. If no manifest files are provided, it will
validate the default site manifest.</p>

<p><code>RETURNS</code></p>

<p>Nothing, or the first syntax error encountered.</p></dd>
</dl>


<h2 id="EXAMPLES">EXAMPLES</h2>

<p><code>validate</code></p>

<p>Validate the default site manifest at /etc/puppet/manifests/site.pp:</p>

<p>$ puppet parser validate</p>

<p>Validate two arbitrary manifest files:</p>

<p>$ puppet parser validate init.pp vhost.pp</p>

<p>Validate from STDIN:</p>

<p>$ cat init.pp | puppet parser validate</p>

<h2 id="COPYRIGHT-AND-LICENSE">COPYRIGHT AND LICENSE</h2>

<p>Copyright 2011 by Puppet Labs
Apache 2 license; see COPYING</p>

</div>
